Uploaded image for project: 'Core Server'
  1. Core Server
  2. SERVER-87264

Ignore getStats till executor loop has not started running fully

    • Type: Icon: Bug Bug
    • Resolution: Fixed
    • Priority: Icon: Major - P3 Major - P3
    • 8.0.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Atlas Streams
    • Fully Compatible
    • ALL
    • Sprint 44, Sprint 45

      We update the operator stats in the executor at the top of the runOnce

      If the SP has just been started up and is still restoring from a checkpoint, this might not yet have happened. 

      Meanwhile, if a `getStats` comes in, it will cause an assert from here:
      combineAdditiveStats

      This is more likely to happen now via usage of `admin spp --list-processors` command in tests that run several tests in parallel

            Assignee:
            sandeep.dhoot@mongodb.com Sandeep Dhoot
            Reporter:
            mayuresh.kulkarni@mongodb.com Mayuresh Kulkarni
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: