SERVER-87264: Do not call combineAdditiveStats() with empty Executor stats. (#19960)